# apolo-mcp-server

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  mcp_config.json  pyproject.toml  qdrant.http  run_mcp_server.sh
examples/: ingestion_example.py
src/mcp_rag_server/: __init__.py  __main__.py  server.py
src/mcp_rag_server/config/: __init__.py
src/mcp_rag_server/ingestion/: embeddings.py  ingestion_pipeline.py  simple_chunker.py
src/mcp_rag_server/rag/: __init__.py  ingestion_pipeline.py  simple_chunker.py
src/mcp_rag_server/resources/: __init__.py
src/mcp_rag_server/tools/: __init__.py  crud.py  rag_tools.py
tests/: __init__.py
