[project]
name = "apolo-mcp-server"
version = "0.1.0"
description = "MCP server for RAG operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "qdrant-client>=1.7.0",
    "fastembed>=0.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastmcp>=3.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_rag_server"]
